# Mastermind-Algoritmos-Geneticos

./: README.md  main.py  pyproject.toml
src/: evolution.py  plotter.py  population.py
test/: tests.py
